# watchmelog

./: .gitignore  .pre-commit-config.yaml  Makefile  Pipfile  README.md  pyproject.toml  setup.py  zappa_settings.json
.circleci/: config.yml
caddy/: Caddyfile  localhost.crt  localhost.key
watchmelog/: .apistar.yml  app.py  config.py  forms.py  pages.py  template_helpers.py  web.py
watchmelog/api/: utils.py
watchmelog/api/v1/: __init__.py  auth.py
watchmelog/api/v1/models/: games.py  players.py
watchmelog/api/v1/types/: games.py  players.py
watchmelog/api/v1/views/: games.py  players.py
watchmelog/core/: csv.py  player.py
watchmelog/models/: games.py  players.py  state.py
watchmelog/old-api/v1/: auth.py
watchmelog/old-api/v1/models/: games.py
watchmelog/old-api/v1/types/: games.py
watchmelog/old-api/v1/views/: players.py
watchmelog/old-web/: utils.py
watchmelog/old-web/models/: state.py
watchmelog/old-web/views/: auth.py
watchmelog/resources/config/: config.yaml
watchmelog/site/: auth.py  root.py
watchmelog/templates/: _formhelpers.jinja2  base.jinja2  index.jinja2  log_game.jinja2  profile.jinja2
watchmelog/templates/player/: csv_import.jinja2
watchmelog/web/: __init__.py  auth.py  csv.py  games.py  utils.py
watchmelog/web/views/: auth.py  web.py
